Fix search icon disappearing on mobile devices

--- a/static/css/index.css
+++ b/static/css/index.css
@@ -24,7 +24,7 @@
     display: none;
   }
   
-  .rightfloat:last-child {
+  .rightfloat:last-child:not([icon="search"]) {
     display: none;
   }
 }
